--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -24,6 +24,7 @@ body {
   background: -moz-linear-gradient(60deg, #C822FF 0%, #1A6DFF 100%);
   background: -webkit-linear-gradient(60deg, #C822FF 0%, #1A6DFF 100%);
   background: linear-gradient(60deg, #C822FF 0%, #1A6DFF 100%);
+  height: 50px;
 }
 
 .navbar {
@@ -32,4 +33,11 @@ body {
 
 .navbar-item {
   color: #ffffff;
+}
+
+#buttonText {
+  font-family: sans-serif;
+  font-size: 24px;
+  font-weight: 600;
+  letter-spacing: 0.1px;
 }
