changed most of this to get it to work with new code

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -43,7 +43,7 @@ body {
   color: #ffffff;
 }
 
-#goalName {
+.goalName {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 24px;
   font-weight: 600;
@@ -58,16 +58,21 @@ body {
   letter-spacing: 2px;
 }
 
-#goalButtonText {
+.goalButtonText {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
     font-weight: 600;
     letter-spacing: 0.1px;
   }
 
-#deleteGoal, #completeGoal {
+.deleteGoal {
   height: 40px;
 }
+
+.completeGoal{
+  height: 40px;
+}
+
 
 #goalsImage {
   width: 400px;
@@ -75,6 +80,11 @@ body {
 }
 
 #createBox, #loginBox, #userGoals, #addGoalBox, #championsBox, #slackerBox {
+  border: 1px solid rgb(208, 208, 208);
+  border-radius: 15px;
+}
+
+.newGoalBox {
   border: 1px solid rgb(208, 208, 208);
   border-radius: 15px;
 }
